--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="nav-container-logo">
             <a href="Index.html">
-                <img class="logo-img" src="img/nav-logo.png" alt="logo.png">
+                <img class="logo-img" src="img/logo.png" alt="logo.png">
             </a>
         </div>
         <ul class="nav-ul">
@@ -49,7 +49,7 @@
                 </p>
             </div>
             <div class="header-container-logo">
-                <img class="logo-transparent" src="img/logo-t.png" alt="logo.png">
+                <img class="logo-transparent" src="img/logoc.png" alt="logo.png">
             </div>
         </header>
     <!-- Sección Nuestros Servicios -->
