--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Barra de Navegación -->
     <nav class="navbar">
         <div class="nav-container-logo">
-            <a href="Index.html">
+            <a href="index.html">
                 <img class="logo-img" src="img/logo.png" alt="logo.png">
             </a>
         </div>
