--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h2 id="Contactanos">
                 Contacto
             </h2>
-            <form name="contact" id="form" method="POST" data-netlify="true">
+            <form class="section-form" name="contact" id="form" method="POST" data-netlify="true">
                 <div class="form-container">
                     <div class="form-container-input">
                         <label class="form-label" for="name">Nombre:</label>
