--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Diseño web profesional, desarrollo Front-End, desarrollo Back-End, creación de 
     páginas web, optimización de rendimiento web, interfaces responsivas, experiencia de usuario intuitiva, APIs 
     REST, desarrollo web escalable">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <link rel="canonical" href="htttps://ovenbirdteam.com">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.css">
@@ -18,7 +19,6 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="styles.css"></noscript>
     <link rel="icon" href="img/logo.ico" type="image/x-icon">
-
     <title>OvenBird Team</title>
 </head>
 <body>
