--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="Diseño web profesional, desarrollo Front-End, desarrollo Back-End, creación de 
     páginas web, optimización de rendimiento web, interfaces responsivas, experiencia de usuario intuitiva, APIs 
     REST, desarrollo web escalable">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
     <link rel="canonical" href="htttps://ovenbirdteam.com">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.css">
