--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
     <meta name="keywords" content="Diseño web profesional, desarrollo Front-End, desarrollo Back-End, creación de 
     páginas web, optimización de rendimiento web, interfaces responsivas, experiencia de usuario intuitiva, APIs 
     REST, desarrollo web escalable">
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow">
     <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
     <link rel="canonical" href="htttps://ovenbirdteam.com">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <!-- <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="styles.css"></noscript> -->
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <title>OvenBird Team</title>
 </head>
@@ -146,8 +140,9 @@
             <h2 id="Contactanos">
                 Contacto
             </h2>
-            <form  data-netlify="true" class="section-form" name="contact" id="form" method="POST">
+            <form  data-netlify="true" netlify-honeypot="bot-field" class="section-form" name="contact" id="form" method="POST">
                 <div class="form-container">
+                    <input class="input-b" name="bot-field" type="hidden">
                     <div class="form-container-input">
                         <label class="form-label" for="name">Nombre:</label>
                         <input class="form-input" type="text" name="name" id="name" placeholder="Nombre" autocomplete="name">
