--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <div class="nav-container-logo">
             <a href="/">
-                <img class="logo-img" src="img/logo.png" alt="logo.wbp">
+                <img class="logo-img" src="img/logo.webp" alt="logo">
             </a>
         </div>
         <ul class="nav-ul">
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="header-container-logo">
-                <img class="logo-transparent" src="img/logoc.png" alt="logo.webp">
+                <img class="logo-transparent" src="img/logoc.webp" alt="logoc">
             </div>
         </header>
     <!-- Sección Nuestros Servicios -->
