--- a/es/index-es.html
+++ b/es/index-es.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,12 +12,12 @@
     páginas web">
     <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
     <link rel="canonical" href="htttps://ovenbirdteam.com">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="/img/logo.ico" type="image/x-icon">
     <title>OvenBird Team</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <div class="nav-container-logo">
             <a href="index.html">
-                <img class="logo-img" src="img/logo.webp" alt="logo">
+                <img class="logo-img" src="/img/logo.webp" alt="logo">
             </a>
         </div>
         <div>
@@ -47,11 +47,11 @@
                 </li>
             </ul>
             <ul>
-                <li class="nav-ul-li">
-                    <a hreflang="en" href="index.html" class="nav-link">English</a>
+                <li>
+                    <a hreflang="es" href="/es">Español</a>
                 </li>
-                <li class="nav-ul-li">
-                    <a hreflang="es" href="es/index-es.html" class="nav-link">Español</a>
+                <li>
+                    <a hreflang="en" href="/">English</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="header-container-logo">
-                <img class="logo-transparent" src="img/logoc.webp" alt="logoc">
+                <img class="logo-transparent" src="/img/logoc.webp" alt="logoc">
             </div>
         </header>
     <!-- Sección Nuestros Servicios -->
