--- a/es/termsandcond/termsandcond.html
+++ b/es/termsandcond/termsandcond.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styleterms.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styleterms.css">
+    <link rel="stylesheet" href="/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>Términos y Condiciones</title>
-    <link rel="icon" href="img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="/img/logo.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Barra de Navegación -->
