--- a/es/es.html
+++ b/es/es.html
@@ -12,20 +12,20 @@
     páginas web">
     <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com;">
     <link rel="canonical" href="htttps://ovenbirdteam.com">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="icon" href="/img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <title>OvenBird Team</title>
 </head>
 <body>
     <!-- Barra de Navegación -->
     <nav class="navbar">
         <div class="nav-container-logo">
-            <a href="index.html">
-                <img class="logo-img" src="/img/logo.webp" alt="logo">
+            <a href="es.html">
+                <img class="logo-img" src="img/logo.webp" alt="logo">
             </a>
         </div>
         <div>
@@ -46,12 +46,12 @@
                     </a>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <a hreflang="es" href="/es">Español</a>
+            <ul class="nav-ul">
+                <li class="nav-ul-li">
+                    <a hreflang="es" href="es.html" class="nav-link">Español</a>
                 </li>
-                <li>
-                    <a hreflang="en" href="/">English</a>
+                <li class="nav-ul-li">
+                    <a hreflang="en" href="/" class="nav-link">English</a>
                 </li>
             </ul>
         </div>
