--- a/es/termsandcond.html
+++ b/es/termsandcond.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/styleterms.css">
-    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleterms.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <!-- Barra de Navegación -->
     <nav class="navbar">
         <div class="nav-container-logo">
-            <a href="index.html">
+            <a href="es.html">
                 <img class="logo-img" src="img/logo.webp" alt="logo">
             </a>
         </div>
