--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a hreflang="en" href="index.html" class="nav-link">English</a>
                 </li>
                 <li class="nav-ul-li">
-                    <a hreflang="es" href="es/index-es.html" class="nav-link">Español</a>
+                    <a hreflang="es" href="es/es.html" class="nav-link">Español</a>
                 </li>
             </ul>
         </div>
