--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Barra de Navegación -->
     <nav class="navbar">
         <div class="nav-container-logo">
-            <a href="index.html">
+            <a href="/">
                 <img class="logo-img" src="img/logo.webp" alt="logo">
             </a>
         </div>
@@ -48,7 +48,7 @@
             </ul>
             <ul>
                 <li class="nav-ul-li">
-                    <a hreflang="en" href="index.html" class="nav-link">English</a>
+                    <a hreflang="en" href="/" class="nav-link">English</a>
                 </li>
                 <li class="nav-ul-li">
                     <a hreflang="es" href="es/es.html" class="nav-link">Español</a>
