--- a/es.html
+++ b/es.html
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="header-container-logo">
-                <img class="logo-transparent" src="/img/logoc.webp" alt="logoc">
+                <img class="logo-transparent" src="img/logoc.webp" alt="logoc">
             </div>
         </header>
     <!-- Sección Nuestros Servicios -->
