--- a/es/termsandcond.html
+++ b/es/termsandcond.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styleterms.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styleterms.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>Términos y Condiciones</title>
-    <link rel="icon" href="/img/logo.ico" type="image/x-icon">
+    <link rel="icon" href="../img/logo.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Barra de Navegación -->
     <nav class="navbar">
         <div class="nav-container-logo">
-            <a href="es.html">
-                <img class="logo-img" src="img/logo.webp" alt="logo">
+            <a href="../es.html">
+                <img class="logo-img" src="../img/logo.webp" alt="logo">
             </a>
         </div>
         <ul class="nav-ul">
             <li class="nav-ul-li">
-                <a href="index.html #NuestrosServicios" class="nav-link">
+                <a href="../es.html #NuestrosServicios" class="nav-link">
                     Nuestros Servicios
                 </a>
             </li>
             <li class="nav-ul-li">
-                <a href="index.html #SobreNosotros" class="nav-link">
+                <a href="../es.html #SobreNosotros" class="nav-link">
                     Sobre Nosotros
                 </a>
             </li>
             <li class="nav-ul-li">
-                <a href="index.html #Contactanos" class="nav-link">
+                <a href="../es.html #Contactanos" class="nav-link">
                     Contáctanos
                 </a>
             </li>
