--- a/es.html
+++ b/es.html
@@ -31,7 +31,7 @@
         <div>
             <ul class="nav-ul">
                 <li class="nav-ul-li">
-                    <a href="#NuestrosServicios" class="nav-link">
+                    <a href="#NuestrosServicio" class="nav-link">
                         Nuestros Servicios
                     </a>
                 </li>
@@ -51,7 +51,7 @@
                     <a hreflang="es" href="es.html" class="nav-link">Español</a>
                 </li>
                 <li class="nav-ul-li">
-                    <a hreflang="en" href="/" class="nav-link">English</a>
+                    <a hreflang="en" href="index.html" class="nav-link">English</a>
                 </li>
             </ul>
         </div>
