--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <div>
             <ul class="nav-ul">
                 <li class="nav-ul-li">
-                    <a href="#NuestrosServicios" class="nav-link">
+                    <a href="#OurServices" class="nav-link">
                         Nuestros Servicios
                     </a>
                 </li>
                 <li class="nav-ul-li">
-                    <a href="#SobreNosotros" class="nav-link">
+                    <a href="#AboutUs" class="nav-link">
                         Sobre Nosotros
                     </a>
                 </li>
                 <li class="nav-ul-li">
-                    <a href="#Contactanos" class="nav-link">
+                    <a href="#ContactUs" class="nav-link">
                         Contáctanos
                     </a>
                 </li>
@@ -73,7 +73,7 @@
         </header>
     <!-- Sección Nuestros Servicios -->
         <section class="section-services">
-            <h2 id="NuestrosServicios">
+            <h2 id="#OurServices">
                     Nuestros Servicios
             </h2>
             <div class="section-container-services">
@@ -131,7 +131,7 @@
         </section>
     <!-- Sección Sobre Nosotros -->
         <section class="section-aboutUs">
-            <h2 id="SobreNosotros">
+            <h2 id="AboutUs">
                 Sobre Nosotros
             </h2>    
             <div class="section-aboutUs-div">
@@ -147,7 +147,7 @@
         </section>
     <!-- Sección Contáctanos -->
         <section class="section-contactUs">
-            <h2 id="Contactanos">
+            <h2 id="ContactUs">
                 Contacto
             </h2>
             <form  data-netlify="true" netlify-honeypot="bot-field" class="section-form" name="contact" id="form" method="POST">
