--- a/es.html
+++ b/es.html
@@ -185,7 +185,7 @@
         <footer class="footer-container">
             <div class="footer-container-links">
                 <a class="footer-link" href="mailto:ovenbirdteam@gmail.com?" class="footer-button-link">Contáctanos</a>
-                <a class="footer-link" href="termsandcond.html">Términos y Condiciones</a>
+                <a class="footer-link" href="es/terminos-y-condiciones.html">Términos y Condiciones</a>
             </div>
             <div class="footer-container-text">
                 <p class="footer-text">©OvenBird Team. Todos los derechos reservados.</p>
