--- a/es/terminos-y-condiciones.html
+++ b/es/terminos-y-condiciones.html
@@ -22,17 +22,17 @@
         </div>
         <ul class="nav-ul">
             <li class="nav-ul-li">
-                <a href="../es.html #NuestrosServicios" class="nav-link">
+                <a href="../es.html#NuestrosServicios" class="nav-link">
                     Nuestros Servicios
                 </a>
             </li>
             <li class="nav-ul-li">
-                <a href="../es.html #SobreNosotros" class="nav-link">
+                <a href="../es.html#SobreNosotros" class="nav-link">
                     Sobre Nosotros
                 </a>
             </li>
             <li class="nav-ul-li">
-                <a href="../es.html #Contactanos" class="nav-link">
+                <a href="../es.html#Contactanos" class="nav-link">
                     Contáctanos
                 </a>
             </li>
@@ -91,7 +91,7 @@
     <footer class="footer-container">
         <div class="footer-container-links">
             <a class="footer-link" href="mailto:ovenbirdteam@gmail.com?subject=Asunto%20del%20Correo&body=Hola,%20este%20es%20el%20cuerpo%20del%20mensaje" class="footer-button-link">Contáctanos</a>
-            <a class="footer-link" href="termsandcond.html">Términos y Condiciones</a>
+            <a class="footer-link" href="terminos-y-condiciones.html">Términos y Condiciones</a>
         </div>
         <div class="footer-container-text">
             <p class="footer-text">©OvenBird Team. Todos los derechos reservados.</p>
